[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "bulletproof-python"
version = "0.1.0"
description = 'Update me...'
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [{ name = "James Williams", email = "james@kananlabs.org" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
bulletproof-python = "bulletproof_python.main:main"

[project.urls]
Documentation = "https://github.com/jamwil/bulletproof-python#readme"
Issues = "https://github.com/jamwil/bulletproof-python/issues"
Source = "https://github.com/jamwil/bulletproof-python"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
paths = ["src", ".tox/*/lib/python*/site-packages"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
strict = true
overrides = [{ module = [], ignore_missing_imports = true }]

[tool.ruff]
target-version = "py311"
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle
    "C90", # mccabe
    "I",   # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "ICN", # flake8-import-conventions
    "T20", # flake8-print
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PLC", # pylint
    "PLE", # pylint
    "PLR", # pylint
    "PLW", # pylint
    "RUF", # ruff-specific rules
]
extend-ignore = [
    "ANN101",
    "D203",
    "D212",
    "D213",
    "D214",
    "D215",
    "D404",
    "D405",
    "D406",
    "D407",
    "D408",
    "D409",
    "D410",
    "D411",
    "D413",
    "D415",
    "D416",
    "D417",
    "E999",
]
src = ["src", "tests"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["PLR2004", "S101"]

[tool.ruff.isort]
known-first-party = ["bulletproof_python"]
